--- a/.github/workflows/azure-kubernetes-service-helm.yml
+++ b/.github/workflows/azure-kubernetes-service-helm.yml
@@ -9,6 +9,7 @@ env:
   DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
   DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
   CONTAINER_NAME: 'python-app'
+  RESOURCE_GROUP: 'actividad_integradora_group'
   CLUSTER_NAME: 'actividad_integradora'
   CHART_PATH: './py-app/'
   CHART_OVERRIDE_PATH: './py-app/values-override.yaml'
