--- a/.github/workflows/azure-kubernetes-service-helm.yml
+++ b/.github/workflows/azure-kubernetes-service-helm.yml
@@ -36,10 +36,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+       # Logs in with your Azure credentials
       - name: Azure login
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
