--- a/py-app/templates/service.yaml
+++ b/py-app/templates/service.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "py-app.fullname" . }}
-  labels:
-    {{- include "py-app.labels" . | nindent 4 }}
+  name: release-name-py-app
 spec:
-  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - name: http
       protocol: TCP
-      name: http
+      port: 5000
+      targetPort: 5000
+    - name: custom-port
+      protocol: TCP
+      port: 5001
+      targetPort: 5001
   selector:
-    {{- include "py-app.selectorLabels" . | nindent 4 }}
+    app: release-name-py-app
