--- a/py-app/templates/service.yaml
+++ b/py-app/templates/service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: release-name-py-app
 spec:
+  type: {{ .Values.service.type }}
   ports:
     - name: http
       protocol: TCP
